feat:新增了上传广告图片的接口